--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
   <main id="main">
     <div class="container">
       <div class="banner">
-        <h1>2028</h1> 
+        <h1>2048</h1> 
         <div class="classe">
           <button id="back" class="botao" onclick="back()">&#60;</button>
           <p id="nivel"></p>
           <button id="next" class="botao" onclick="next()">&#62;</button>
         </div>
-        <a href="jogo.html" onclick="criarTabuleiro()">JOGAR</a>
+        <a href="jogo.html" id="jogar">JOGAR</a>
         <a href="#">Avaliar</a>
         <a href="sobre.html">sobre</a>
 
