--- a/jogo.html
+++ b/jogo.html
@@ -32,7 +32,7 @@
       </div>
       </div>
       
-      <div class="lable-play" id="lable-play" onclick="mover()">
+      <div class="lable-play" id="lable-play">
         
       </div>
     </div>
